# comp-sys-perf-analysis

./: .gitignore  README.md  TODO.md  analysis.ipynb  doe.ipynb  flake.nix  projeto_experimental.csv  pyproject.toml  run_llm.sh  test_cuda.py
cuda_test/: test_cuda.slurm
data/N1_tupi_none_long_r1_780636/: 780636.err
data/N2_poti_PP_long_r1_780630/: 780630.err
data/N2_poti_PP_short_r1_780628/: 780628.err
data/N2_poti_TP_long_r1_780629/: 780629.err  780629.out
data/N2_poti_TP_short_r1_780627/: 780627.out
data/N2_tupi_PP_long_r1_781237/: 781237.err  781237.out
data/N2_tupi_PP_short_r1_781238/: 781238.err  781238.out
data/N2_tupi_TP_long_r1_781236/: 781236.err  781236.out
data/N2_tupi_TP_short_r1_781235/: 781235.err  781235.out
data/N4_poti_PP_long_r1_780638/: 780638.err
data/N4_poti_PP_short_r1_780634/: 780634.err  780634.out
data/N4_poti_TP_long_r1_780632/: 780632.err  780632.out
data/N4_poti_TP_short_r1_780631/: 780631.err  780631.out
data/processed/: gpu_summary.csv  summary.csv
data_processed/: gpu_summary.csv  summary.csv
docs_pcad/: pcad.md
llm_test/: llm_test.py  llm_test.slurm
notebooks/: 01_setup.ipynb  02_analysis.ipynb  03_telemetry.ipynb  data_preprocessing.ipynb  doe.ipynb  gpu_telemetry.ipynb  inference_analysis.ipynb  summary.csv
scripts/: config.sh  create-env-vllm.sh  get_from_pcad.sh  get_head_ip.sh  ray_node_run.sh  run_local.sh  run_vllm_bench.sh  run_vllm_ray_bench.sh  slurm_task.sh  slurm_task_ray.sh  submit_jobs.sh  sync_to_pcad.sh
slurm/: infer_ray.slurm  infer_vllm.slurm
tex/: .gitignore  main.tex
(+127 files in other folders)
