[project]
name = "comp-sys-perf-analysis"
version = "0.1.0"
description = "CMP223 — inferência Llama 3.1 8B particionada (vLLM + aiperf no PCAD)"
requires-python = "==3.13.*"
[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "ipykernel",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyDOE3",
]
pcad = [
    "vllm>=0.20,<0.21",
    "aiperf>=0.7,<0.8",
    "ray[serve]>=2.55.1",
]
